# volkswagencarnet

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST  README.md  dashboard.py  pyproject.toml  pytest.ini  rate_limit_analysis.py  refresh_test.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  utilities.py  volkswagencarnet.py  vw_connection.py  vw_const.py  vw_dashboard.py  vw_utilities.py  vw_vehicle.py
.github/: release-drafter.yml  renovate.json
.github/workflows/: codecov.yaml  codeql-analysis.yml  prerelease.yaml  publish.yaml  python-package.yml  python-publish.yml  release.yaml  snyk.yaml  testrelease.yaml  validate.yml  validate_pr.yaml
pyweconnect/: connection.py  dashboard.py  vehicle.py
tests/: __init__.py  conftest.py  credentials.py.sample  dummy_test.py  fixtures.py  integration_test.py  local_test.py  vw_connection_test.py  vw_exceptions_test.py  vw_timer_test.py  vw_utilities_test.py  vw_vehicle_test.py
tests/fixtures/: __init__.py  connection.py  constants.py  mock_server.py
tests/fixtures/resources/responses/: README.md  status.json  timer.json  timer_without_settings.json
tests/fixtures/resources/responses/arteon_2023_diesel/: capabilities.json  last_trip.json  parkingposition.json  selectivestatus_by_app.json
tests/fixtures/resources/responses/egolf/: README.md  capabilities.json  last_trip.json  parkingposition.json  selectivestatus_by_app.json
tests/fixtures/resources/responses/eup_electric/: capabilities.json  last_trip.json  parkingposition.json  selectivestatus_by_app.json
tests/fixtures/resources/responses/golf_gte_hybrid/: capabilities.json  last_trip.json  selectivestatus_by_app.json
tests/resources/: dummy_cookies.pickle
volkswagencarnet/: __init__.py  const.py  vw_connection.py  vw_const.py  vw_dashboard.py  vw_exceptions.py  vw_timer.py  vw_utilities.py  vw_vehicle.py
