[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.37.0",
    "setuptools_scm>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
write_to = "volkswagencarnet/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["*_test.py"]
