[metadata]
name = volkswagencarnet
author = Robin Ostlund
author_email = me@robinostlund.name
description = Communicate with Volkswagen WeConnect
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robinostlund/volkswagencarnet
project_urls =
    Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
  = .
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[flake8]
ignore =
    E722,
    I201,
    W503,
    CFQ001,
    CFQ002

filename =
    *.py

exclude =
    .git,
    __pycache__,
    *.txt,
    *.md,
    *.cfg

max_line_length = 120
count = True
inline_quotes = double
show_source = True
statistics = True

#format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s

[pycodestyle]
max_line_length=250
statistics = True
ignore = E722
count = True
verbose = True
show_source = True

[tool:pytest]
minversion = 5.4.3
addopts = -ra -q
testpaths = tests
python_files = *_test.py
