[metadata]
name = volkswagencarnet
author = Robin Ostlund
author_email = me@robinostlund.name
description = Communicate with Volkswagen WeConnect
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robinostlund/volkswagencarnet
project_urls =
    Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
  = .
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[flake8]
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E722,
    I201,
    W503,
    CFQ001,
    CFQ002,
    E501,
    W503,
    E203,
    D202,
    W504

filename =
    *.py

exclude =
    .git,
    __pycache__,
    *.txt,
    *.md,
    *.cfg

max_line_length = 120
count = True
inline_quotes = double
show_source = True
statistics = True

#format = {yellow_bold}%(row)d${reset}:${green_bold}%(col)d${reset}: ${red_bold}%(code)s${reset} %(text)s

[pycodestyle]
max_line_length=120
statistics = True
ignore = E722
count = True
verbose = True
show_source = True

[tool:pytest]
minversion = 5.4.3
addopts = -ra -q --cov=volkswagencarnet --cov-report html
testpaths = tests
python_files = *_test.py

[coverage:run]
branch = True
omit = tests/*,volkswagencarnet/version.py  # define paths to omit

[coverage:report]
#show_missing = True
skip_covered = True