[metadata]
name = volkswagencarnet
author = Robin Ostlund
author_email = me@robinostlund.name
description = Communicate with Volkswagen Connect
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robinostlund/volkswagencarnet
project_urls =
    Bug Tracker = https://github.com/robinostlund/volkswagencarnet/issues
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    lxml
    beautifulsoup4
    aiohttp
    pyjwt
package_dir =
  = .
packages = find:
python_requires = >= 3.11

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[pycodestyle]
max_line_length=120
statistics = True
ignore = E722
count = True
verbose = True
show_source = True

[coverage:run]
branch = True
omit = tests/*,volkswagencarnet/version.py  # define paths to omit

[coverage:report]
#show_missing = True
skip_covered = False
